Update folders and metadata

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,19 @@
       name="Worldwide Hydes"
       content="Around the world there a mysterious people who aren't what they seem. When midnight strikes, the Hydes come out!"
     />
+    <meta property="og:url" content="https://www.worldwidehydes.com/">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Worldwide Hydes">
+    <meta property="og:description" content="Worldwide Hydes is a novel NFT collection by Smolrun.">
+    <meta property="og:image" content="https://cdn.discordapp.com/attachments/938262806292234280/1308290570665590845/logo.png?ex=673d680a&is=673c168a&hm=55d82f1975c29c346c0b5974f865d9de2147fae6af1f9653bdd614cbb5cc4bf2&">
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:domain" content="worldwidehydes.com">
+    <meta property="twitter:url" content="https://www.worldwidehydes.com/">
+    <meta name="twitter:title" content="Worldwide Hydes">
+    <meta name="twitter:description" content="Worldwide Hydes is a novel NFT collection by Smolrun.">
+    <meta name="twitter:image" content="https://cdn.discordapp.com/attachments/938262806292234280/1308290570665590845/logo.png?ex=673d680a&is=673c168a&hm=55d82f1975c29c346c0b5974f865d9de2147fae6af1f9653bdd614cbb5cc4bf2&">
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
